Test change layout of README

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+<h1>The Health Research Portal</h1>
+
 This is the Open Journal System (OJS) v. 2.3.4.
 This has been modified for a project concerning Ethical review processes.
 This system is under development and includes a lot of bugs to fix.
