--- a/locale/en_US/manager.xml
+++ b/locale/en_US/manager.xml
@@ -302,7 +302,8 @@
 	<message key="manager.payment.userName">Payment ID</message>
 	<message key="manager.people.allEnrolledUsers">Users Enrolled in the Committee System </message>
 	<message key="manager.people.allJournals">All Sites</message>
-	<message key="manager.people.allSiteUsers">Enrol a User from this Site in the Committee System</message>
+	<message key="manager.people.allSiteUsers">Enrol a User (Secretary, Reviewer, Adminsitrator, Investigator etc.)</message>
+	<message key="manager.people.seeEnrolled">See Enrolled</message>
 	<message key="manager.people.showNoRole">Users with restricted access (no role)</message>
 	<message key="manager.people.allUsers">All Enrolled Users</message>
 	<message key="manager.people.confirmRemove">Remove this user from this journal? This action will unenroll the user from all roles within this journal.</message>
