Added Lao translation for risk assessments

--- a/locale/la_LA/locale.xml
+++ b/locale/la_LA/locale.xml
@@ -421,47 +421,48 @@
 
         <!-- Risk Assesment -->
         <!-- EL on March 9th 2013-->
-        <message key="proposal.riskAssessment">Risk Assessment</message>
-        <message key="proposal.researchIncludesHumanSubject">Does the proposed research include research subjects:</message>
-        <message key="proposal.identityRevealed">Whose identity may be revealed during the research process?</message>
-        <message key="proposal.unableToConsent">Unable to consent?</message>
-        <message key="proposal.under18">Under 18 years old?</message>
-        <message key="proposal.dependentRelationship">In a dependent relationship with any of the research team members?</message>
-        <message key="proposal.dependentRelationshipInstruct">(e.g. a researcher is the treating physician of one of the research participants)</message>
-        <message key="proposal.ethnicMinority">From an ethnic minority group?</message>
-        <message key="proposal.impairment">With intellectual or mental impairment?</message>
-        <message key="proposal.pregnant">Who are pregnant?</message>
-        <message key="proposal.researchIncludes">Does the research include:</message>
-        <message key="proposal.newTreatment">A new treatment, medical procedure or test?</message>
-        <message key="proposal.bioSamples">Collection of biological samples including tissue extraction?</message>
-        <message key="proposal.radiation">Use of ionizing radiation?</message>
-        <message key="proposal.distress">Pain or psychological distress?</message><message key="proposal.inducements">Inducements?</message>
-        <message key="proposal.sensitiveInfo">Collection of sensitive information?</message>
-        <message key="proposal.reproTechnology">Assisted reproductive technology?</message>
-        <message key="proposal.genetic">Human genetic or genomic studies?</message>
-        <message key="proposal.stemCell">Stem cell research?</message>
-        <message key="proposal.biosafety">Biosafety issue?</message>
-        <message key="proposal.potentialRisk">Potential risks</message>
-        <message key="proposal.riskLevel">Level of the risk involved in Research</message>
+        <message key="proposal.riskAssessment">ການປະເມີນຄວາມສ່ຽງ</message>
+        <message key="proposal.researchIncludesHumanSubject">ບົດສະເໜີການຄົ້ນຄວ້າກ່ຽວຂ້ອງກັບຄົນ:</message>
+        <message key="proposal.identityRevealed">ຂໍ້ມູນສ່ວນຕົວອາດຖືກເປີດເຜີຍໃນລະຫວ່າງຂະບວນການຄົ້ນຄວ້າບໍ?</message>
+        <message key="proposal.unableToConsent">ບໍ່ສາມາດໃຫ້ການຍິນຍອມເຂົ້າຮ່ວມການຄົ້ນຄວ້າໄດ້?</message>
+        <message key="proposal.under18">ອາຍຸຕ່ຳກວ່າ 18 ປີບໍ?</message>
+        <message key="proposal.dependentRelationship">ມີສາຍພົວພັນສ່ວນຕົວກັບທີມງານນັກຄົ້ນຄວ້າບໍ?</message>
+        <message key="proposal.dependentRelationshipInstruct">(ຕົວຢ່າງ: ນັກຄົ້ນຄວ້າແມ່ນແພດປິ່ນປົວໃຫ້ແກ່ຜູ້ເຂົ້າຮ່ວມການຄົ້ນຄວ້າຄົນໃດໜຶ່ງ)</message>
+        <message key="proposal.ethnicMinority">ແມ່ນຊົນເຜົ່າໃດບໍ?</message>
+        <message key="proposal.impairment">ມີຄວາມບົກຜ່ອງທາງດ້ານສະຕິປັນຍາ ຫຼື ສຸຂະພາບຈິດບໍ?</message>
+        <message key="proposal.pregnant">ແມ່ນແມ່ຍິງກຳລັງຖືພາບໍ?</message>
+        <message key="proposal.researchIncludes">ບົດຄົ້ນຄວ້ານີ້ກວມເອົາ:</message>
+        <message key="proposal.newTreatment">ການປິ່ນປົວວິທີໃໝ່, ວິທີການປິ່ນປົວ ຫຼື ການທົດລອງບໍ?</message>
+        <message key="proposal.bioSamples">ການເກັບຕົວຢ່າງທາງຊີວະວິທະຍາເຊັ່ນ:ຈາກເລືອດ, ການຕັດສິ້ນສ່ວນຈາກເນື້ອເຍື່ອຕ່າງໆຫຼືບໍ?</message>
+        <message key="proposal.radiation">ການນຳໃຊ້ແສງລັງສີຫຼືບໍ?</message>
+        <message key="proposal.distress">ມີອາການເຈັບປວດ ຫຼື ຄວາມໂສກເສົ້າບໍ?</message>
+        <message key="proposal.inducements">ການຊັກຊວນບໍ?</message>
+        <message key="proposal.sensitiveInfo">ມີການເກັບຂໍ້ມູນທີ່ມີຄວາມລະອຽດອ່ອນບໍ?</message>
+        <message key="proposal.reproTechnology">ເຕັກໂນໂລຢີຊ່ວຍໃນການຈະເລີນພັນບໍ?</message>
+        <message key="proposal.genetic">ການສຶກສາທາງພັນທຸກຳຂອງມະນຸດບໍ?</message>
+        <message key="proposal.stemCell">ການຄົ້ນຄວ້າຈຸລັງຕົ້ນກຳເນີດບໍ?</message>
+        <message key="proposal.biosafety">ປະເດັນຄວາມປອດໄພທາງດ້ານຊີວະພາບບໍ?</message>
+        <message key="proposal.potentialRisk">ຄວາມສ່ຽງທີ່ອາດຈະເກີດຂື້ນໄດ້</message>
+        <message key="proposal.riskLevel">ລະດັບຂອງຄວາມສ່ຽງຢູ່ໃນການຄົ້ນຄວ້າ</message>
         <message key="proposal.riskLevelInstruct">Minimal risk means that the probability and magnitude of harm or discomfort anticipated in the research are not greater in and of themselves than those ordinarily encountered in daily life or during the performance of routine physical or psychological examination or tests.</message>
-        <message key="proposal.riskLevelNoMore">No more than minimal risk</message>
-        <message key="proposal.riskLevelMinore">Minor increase over minimal risk</message>
-        <message key="proposal.riskLevelMore">More than minor increase over minimal risk</message>
-        <message key="proposal.listRisks">Briefly list the risks</message>
-        <message key="proposal.howRisksMinimized">How are risks minimized / managed?</message>
-        <message key="proposal.riskApplyTo">Risks apply to</message>
-        <message key="proposal.researchTeam">Research Team</message>
-        <message key="proposal.researchSubjects">Research Subjects</message>
-        <message key="proposal.widerCommunity">Wider Community</message> 
+        <message key="proposal.riskLevelNoMore">ມີຄວາມສ່ຽງໜ້ອຍທີ່ສຸດ</message>
+        <message key="proposal.riskLevelMinore">ມີຄວາມສ່ຽງປານກາງ</message>
+        <message key="proposal.riskLevelMore">ມີຄວາມສ່ຽງສູງ</message>
+        <message key="proposal.listRisks">ສະຫຼຸບຫຍໍ້ລາຍການຄວາມສ່ຽງ</message>
+        <message key="proposal.howRisksMinimized">ຄວາມສ່ຽງຈະຖືກແກ້ໄຂແນວໃດ?</message>
+        <message key="proposal.riskApplyTo">ນຳຄວາມສ່ຽງໃຫ້ແກ່:</message>
+        <message key="proposal.researchTeam">ທີມນັກຄົ້ນຄວ້າ</message>
+        <message key="proposal.researchSubjects">ຫົວຂໍ້ຂອງການຄົ້ນຄວ້າ</message>
+        <message key="proposal.widerCommunity">ຊຸມຊົນ</message> 
         <message key="proposal.nobody">Nobody</message>        
-        <message key="proposal.potentialBenefits">Potential Benefits</message>
-        <message key="proposal.directBenefits">Direct benefit to participants</message>
-        <message key="proposal.participantCondition">Generalizable knowledge about participants' condition or disorder</message>
-        <message key="proposal.diseaseOrCondition">Generalizable knowledge about disease or condition under study </message>
-        <message key="proposal.benefitsFromTheProject">Benefits from the research project</message>
+        <message key="proposal.potentialBenefits">ຜົນປະໂຫຍດຕ່າງໆທີ່ຈະໄດ້ຮັບ</message>
+        <message key="proposal.directBenefits">ນຳຜົນປະໂຫຍດໂດຍກົງໃຫ້ແກ່ຜູ້ເຂົ້າຮ່ວມການສຶກສາ</message>
+        <message key="proposal.participantCondition">ເປັນຂໍ້ມູນກ່ຽວກັບສະພາບຂອງຜູ້ເຂົ້າຮ່ວມການສຶກສາ ຫຼື ຄວາມຫຍຸຸ້ງຍາກຕ່າງໆ</message>
+        <message key="proposal.diseaseOrCondition">ເປັນຂໍ້ມູນກ່ຽວກັບພະຍາດ ຫຼື ເງື່ອນໄຂທີ່ກຳລັງສຶກສາ</message>
+        <message key="proposal.benefitsFromTheProject">ຜົນປະໂຫຍດຈາກການເຮັດການຄົ້ນຄວ້າ:</message>
         <message key="proposal.noBenefits">No benefits</message>
         <message key="proposal.multiInstitutions">Multi-institution Project </message>
-        <message key="proposal.conflictOfInterest">Conflict of Interest</message>
+        <message key="proposal.conflictOfInterest">ທ່ານໄດ້ຮັບຜົນປະໂຫຍດ ຫຼືເສຍຜົນປະໂຫຍດຈາກການເຮັດການຄົ້ນຄວ້ານີ້ບໍ່:</message>
         <message key="proposal.conflictOfInterestInstruct">Does any member of the research team has any financial or technical conflict of interest in the proposed research (i.e. whether any member of the research team is likely to be affected, positively or negatively, by the outcomes of the research in financial or technical terms)</message>
         <message key="proposal.identityRevealedAbb">Identity revealed</message>
         <message key="proposal.unableToConsentAbb">Unable to consent</message>
