--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -1283,7 +1283,7 @@ current password.<br /><br />Enter your email address below to reset your passwo
 	
         <message key="about.onlineSubmissions.registration">Go to Registration</message>
 	<message key="about.onlineSubmissions.registrationRequired">Registration and login are required to submit items online and to check the status of current proposals.</message>
-	<message key="about.authorGuidelines">Investigator Guidelines</message>
+	<message key="about.authorGuidelines">Guidelines</message>
 	<message key="about.submissionPreparationChecklist">Submission Preparation Checklist</message>
 	<message key="about.submissionPreparationChecklist.description">As part of the proposal process, authors are required to check off their proposal's compliance with all of the following items, and proposals may be returned to authors that do not adhere to these guidelines.</message>
 	<message key="about.copyrightNotice">Copyright Notice</message>
