--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -381,6 +381,41 @@
     <message key="proposal.addAnotherAgency">Add another agency</message>
     <message key="proposal.randomlySelectedProvince">Yes, with randomly selected geographical areas</message>
 
+
+        <message key="proposal.purpose.endpoint.saf">Safety</message>
+        <message key="proposal.purpose.endpoint.eff">Efficacy</message>
+        <message key="proposal.purpose.endpoint.safAndEff">Safety and Efficacy</message>
+        <message key="proposal.purpose.endpoint.kin">Pharmacokinetics</message>
+        <message key="proposal.purpose.endpoint.dyn">Pharmacodynamics</message>
+        <message key="proposal.purpose.endpoint.kinAndDyn">Pharmacokinetics and Pharmacodynamics</message>
+        <message key="proposal.purpose.assignment.single">Single</message>
+        <message key="proposal.purpose.assignment.parallel">Parallel</message>
+        <message key="proposal.purpose.assignment.crossover">Crossover</message>
+        <message key="proposal.purpose.assignment.factorial">Factorial</message>
+        <message key="proposal.purpose.control.placebo">Placebo</message>
+        <message key="proposal.purpose.control.active">Active</message>
+        <message key="proposal.purpose.control.uncontrolled">Uncontrolled</message>
+        <message key="proposal.purpose.control.historical">Historical</message>
+        <message key="proposal.purpose.control.dose">Dose Comparisonl</message>
+        <message key="proposal.purpose.masking.open">Open Label</message>
+        <message key="proposal.purpose.masking.single">Single Blind</message>
+        <message key="proposal.purpose.masking.double">Double Blind</message>
+        <message key="proposal.purpose.allocation.rand">Randomized</message>
+        <message key="proposal.purpose.allocation.nonRand">Non-Randomized</message>
+        <message key="proposal.purpose.phase.0">Phase 0</message>
+        <message key="proposal.purpose.phase.I">Phase I</message>
+        <message key="proposal.purpose.phase.II">Phase II</message>
+        <message key="proposal.purpose.phase.III">Phase III</message>
+        <message key="proposal.purpose.phase.IV">IV</message>
+        <message key="proposal.purpose.phase.bio">Bioequivalence</message>
+        <message key="proposal.purpose.type.obs">Observational Study</message>
+        <message key="proposal.purpose.type.int">Interventional Study</message>
+        <message key="proposal.purpose.type.diganosis">Diagnosis</message>
+        <message key="proposal.purpose.type.early">Early detection or screening</message>
+        <message key="proposal.purpose.type.prevention">Prevention</message>
+        <message key="proposal.purpose.type.drugs">Treatment: Drugs</message>
+        <message key="proposal.purpose.type.devices">Treatment: Devices</message>
+        <message key="proposal.purpose.type.others">Treatment: Others</message>
         <message key="proposal.secId.sponsor">Sponsor issued trial number</message>
         <message key="proposal.secId.otherRegistry">Trial number by other registry</message>
         <message key="proposal.secId.utn">Universal Trial Number</message>
